moved to seperate step

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,7 +29,10 @@ jobs:
       - name: determine version
         run: |
             echo "test=v1.2.3." >> $GITHUB_ENV
-            echo "to log info: ${test}"
+
+      - name: print version
+        run: |
+            echo "print version: ${test}"
 
 #      - name: Run tests
 #        run: |
