--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -73,5 +73,5 @@ jobs:
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: $VERSION
+          custom_tag: ${{env.VERSION}}
           tag_prefix: ""
