--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,9 @@ on:
     tags:
       - v*
 
+  workflow_dispatch:
+    # Allow this event to be triggered in the github ui
+
   # Run tests for any PRs.
   pull_request:
 
