--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,36 +22,30 @@ on:
 
 env:
   IMAGE_NAME: petsc-build
-  PLATFORMS: linux/arm64,linux/amd64
-
+  PLATFORM: [linux/arm64,linux/amd64]
 jobs:
-  # Run tests.
-  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  test:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
+  get-version:
+    runs-on: ubuntu-latest 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@master
-        with:
-          platforms: all
-          
-      - uses: actions/checkout@v2
+    - id: version
+      run: |
+        # Get the latest version of petsc 
+        export PETSC_COMMIT=$(git ls-remote https://gitlab.com/petsc/petsc.git HEAD | awk '{ print substr($1, 1, 8)}'D)
+        echo "::set-output name=petsc_commit::${PETSC_COMMIT}"
+        
+        
+        # share with the outputs
+        outputs:
+        petsc_commit: ${{ steps.version.outputs.petsc_commit }}
       
-      - name: Set up docker
-        run: docker buildx create --name builder --use
-
-      - name: Run tests
-        run: |
-            docker buildx build . --file Dockerfile  --platform ${PLATFORMS} --tag $IMAGE_NAME       
-            docker build . --file DockerAblateFile --tag ablate_image
-
+  
   # Push image to GitHub Packages.
-  # See also https://docs.docker.com/docker-hub/builds/
-  push:
+  build:
+    needs: get-version
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    strategy:
+      matrix:
+        platform: ${{ env.PLATFORM}}
 
     steps:
       - name: Set up QEMU
@@ -59,41 +53,97 @@ jobs:
         with:
           platforms: all
           
-      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1    
+          
+      - name: checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up docker
-        run: docker buildx create --name builder --use
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
 
       - name: Build image
-        run: docker buildx build . --file Dockerfile --tag $IMAGE_NAME --load           
-      
-      - name: Test ablate
-        if: github.event_name != 'workflow_dispatch'
-        run: docker build . --file DockerAblateFile --tag ablate-build
-        
-      - name: Get the git commit ID from the build file
-        run: echo "VERSION=$(docker run --rm $IMAGE_NAME git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      - name: Log into registry
-        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
-
-      - name: Push image
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
+          # define the image id
+          PLATFORM_NAME=$(echo ${{ matrix.platform }} | tr -d / ')
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-$PLATFORM_NAME
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
+          echo PLATFORM=${{ matrix.platform }}
+          
+          # Build the image
+          docker buildx build .\
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
+            --platform ${{ matrix.platform }}
+            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}}
+            --load
+            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}}
+            --file Dockerfile    
+     
 
-          docker buildx build . --file Dockerfile --platform ${PLATFORMS} --tag $IMAGE_ID:latest --tag $IMAGE_ID:$VERSION --push
+  # Run tests.
+  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
+  test:
+    needs: [get-version, build]
+    runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
+    strategy:
+      matrix:
+        platform: ${{ env.PLATFORM}}
 
-   
-      - name: set version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{env.VERSION}}
-          tag_prefix: ""
+          platforms: all
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1            
+          
+      - uses: actions/checkout@v2
+      
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+
+      - name: Run tests
+        run: |
+        - name: Build image
+        run: |
+          # define the image id
+          PLATFORM_NAME=$(echo ${{ matrix.platform }} | tr -d / ')
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-$PLATFORM_NAME
+
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
+          echo PLATFORM=${{ matrix.platform }}
+          
+          # Build the image
+          docker buildx build .\
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
+            --platform ${{ matrix.platform }}
+            --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}}
+            --file DockerAblateFile    
+          
