--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
         with:
-          platforms: all
+          platforms: [arm64,amd64]
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1    
@@ -105,7 +105,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
         with:
-          platforms: all
+          platforms: [arm64,amd64]
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1            
