--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,7 @@ on:
 
 env:
   IMAGE_NAME: petsc-build
+  PLATFORMS: linux/arm64,linux/amd64
 
 jobs:
   get-version:
@@ -35,25 +36,20 @@ jobs:
         
     outputs:
       petsc_commit: ${{ steps.version.outputs.petsc_commit }}
-      
-  
+
   # Push image to GitHub Packages.
   build:
     needs: get-version
     runs-on: ARM64
-    strategy:
-      matrix:
-        platform: [linux/arm64,linux/amd64]
-
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
         with:
           platforms: arm64,amd64
-          
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1    
-          
+        uses: docker/setup-buildx-action@v1
+
       - name: checkout code
         uses: actions/checkout@v2
 
@@ -66,30 +62,27 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-
       - name: Build image
         run: |
           # define the image id
           PLATFORM_NAME=$(echo ${{ matrix.platform }} | tr -d /)
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-$PLATFORM_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          echo PLATFORM=${{ matrix.platform }}
-          
+
           # Build the image
           docker buildx build .\
             --cache-from "type=local,src=/tmp/.buildx-cache" \
             --cache-to "type=local,dest=/tmp/.buildx-cache" \
-            --platform ${{ matrix.platform }} \
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
-            --load \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
-            --file Dockerfile \
-     
+            --platform $${env.PLATFORMS}} \
+            --push \
+            --file Dockerfile 
 
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
@@ -97,16 +90,7 @@ jobs:
     needs: [get-version, build]
     runs-on: ARM64
     if: github.event_name != 'workflow_dispatch'
-    strategy:
-      matrix:
-        platform: [linux/arm64,linux/amd64]
-
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@master
-        with:
-          platforms: arm64,amd64
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1            
           
@@ -124,21 +108,67 @@ jobs:
       - name: Run Test image
         run: |
           # define the image id
-          PLATFORM_NAME=$(echo ${{ matrix.platform }} | tr -d /)
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-$PLATFORM_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          echo PLATFORM=${{ matrix.platform }}
           
           # Build the image
           docker buildx build .\
             --cache-from "type=local,src=/tmp/.buildx-cache" \
             --cache-to "type=local,dest=/tmp/.buildx-cache" \
-            --platform ${{ matrix.platform }} \
             --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
-            --file DockerAblateFile    
+            --file DockerAblateFile
           
+
+  # Tag the image as latest and the version in the repo
+  tag:
+    needs: [get-version,test]
+    if: ${{needs.test.result == 'success" || needs.test.result == 'skipped"}}
+    runs-on: ARM64
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: arm64,amd64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build image
+        run: |
+          # define the image id
+          PLATFORM_NAME=$(echo ${{ matrix.platform }} | tr -d /)
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
+          
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
+          
+          # Build the image
+          docker buildx build .\
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
+            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
+            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
+            --tag $IMAGE_ID:latest \
+            --platform $${env.PLATFORMS}} \
+            --push \
+            --file Dockerfile 
