--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   get-version:
-    runs-on: ARM64 
+    runs-on: [self-hosted, linux, ARM64]
     steps:
     - id: version
       run: |
