--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -127,4 +127,46 @@ jobs:
             --cache-to "type=local,dest=/tmp/.buildx-cache" \
             --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
             --file DockerAblateFile    
+
+  # Push the latest tag if everything passed
+  push-latest:
+    needs: [get-version, test]
+    runs-on: ubuntu-latest 
+    if: ${{!(contains(needs.*.result, 'failure'))}}
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1            
           
+      - uses: actions/checkout@v2
+      
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Run Test image
+        run: |
+          # Define the base image id
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          # build a manifest file for this version
+          docker manifest create \
+            $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
+            --amend $IMAGE_ID-arm64:${{ needs.get-version.outputs.petsc_commit}} \
+            --amend $IMAGE_ID-x64:${{ needs.get-version.outputs.petsc_commit}} 
+
+          # push
+          docker manifest push $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}}
+
+
+          # tag as latest
+          docker tag $IMAGE_ID $IMAGE_ID:latest
+          docker push $IMAGE_ID:latest
+  
+                    
