--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,10 +36,63 @@ jobs:
     outputs:
       petsc_commit: ${{ steps.version.outputs.petsc_commit }}
       
-  
+  # Run tests.
+  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
+  test:
+    needs: [get-version]
+    strategy:
+      matrix:
+        arch: [ARM64, X64]
+    runs-on: ${{ matrix.arch }}
+    if: github.event_name != 'workflow_dispatch'
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1            
+          
+      - uses: actions/checkout@v2
+      
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+            
+      - name: Run Test image
+        run: |
+          # define the image id
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-${{matrix.arch}}
+
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
+          echo ARCH=${{matrix.arch}}
+          
+          # build the petsc-image
+          docker buildx build .\
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
+            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
+            --load \
+            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
+            --file Dockerfile \
+
+          # Build the image
+          docker buildx build .\
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
+            --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
+            --file DockerAblateFile    
+
   # Push image to GitHub Packages.
   build:
-    needs: get-version
+    needs: [get-version, test]
+	if: ${{!(contains(needs.*.result, 'failure'))}} && github.event_name != 'pull_request'
     strategy:
       matrix:
         arch: [ARM64, X64]
@@ -86,58 +139,11 @@ jobs:
             --file Dockerfile \
      
 
-  # Run tests.
-  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  test:
-    needs: [get-version, build]
-    strategy:
-      matrix:
-        arch: [ARM64, X64]
-    runs-on: ${{ matrix.arch }}
-    if: github.event_name != 'workflow_dispatch'
-
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1            
-          
-      - uses: actions/checkout@v2
-      
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-            
-      - name: Log into registry
-        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
-
-      - name: Run Test image
-        run: |
-          # define the image id
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-${{matrix.arch}}
-
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          echo ARCH=${{matrix.arch}}
-          
-          # Build the image
-          docker buildx build .\
-            --cache-from "type=local,src=/tmp/.buildx-cache" \
-            --cache-to "type=local,dest=/tmp/.buildx-cache" \
-            --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
-            --file DockerAblateFile    
-
-  # Push the latest tag if everything passed
+  # Push the latest tag if everything build
   push-latest:
-    needs: [get-version, test]
+    needs: [get-version, build]
     runs-on: ubuntu-latest 
-    if: ${{!(contains(needs.*.result, 'failure'))}}
+    if: github.event_name != 'pull_request'
 
     steps:
       - name: Set up Docker Buildx
