--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -42,8 +42,8 @@ jobs:
     needs: [get-version]
     strategy:
       matrix:
-        arch: [ARM64, X64]
-    runs-on: ${{ matrix.arch }}
+        config: [{runson: ARM64, arch: ARM64}, {runson: ubuntu-latest, arch: AMD64}]
+    runs-on: ${{ matrix.config.runson }}
     if: github.event_name != 'workflow_dispatch'
 
     steps:
@@ -64,14 +64,14 @@ jobs:
       - name: Run Test image
         run: |
           # define the image id
-          IMAGE_ID=$IMAGE_NAME-${{matrix.arch}}
+          IMAGE_ID=$IMAGE_NAME-${{matrix.config.arch}}
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          echo ARCH=${{matrix.arch}}
+          echo ARCH=${{matrix.config.arch}}
           
           # build the petsc-image
           docker buildx build .\
@@ -96,8 +96,8 @@ jobs:
     if: ${{!(contains(needs.*.result, 'failure')) && github.event_name != 'pull_request'}} 
     strategy:
       matrix:
-        arch: [ARM64, X64]
-    runs-on: ${{ matrix.arch }}
+        config: [{runson: ARM64, arch: ARM64}, {runson: ubuntu-latest, arch: AMD64}]
+    runs-on: ${{ matrix.config.runson }}
 
     steps:          
       - name: Set up Docker Buildx
@@ -121,14 +121,14 @@ jobs:
       - name: Build image
         run: |
           # define the image id
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-${{matrix.arch}}
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME-${{matrix.config.arch}}
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          echo ARCH=${{matrix.arch}}
+          echo ARCH=${{matrix.config.arch}}
           
           # Build the image
           docker buildx build .\
@@ -174,7 +174,7 @@ jobs:
           docker manifest create \
             $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
             --amend $IMAGE_ID-arm64:${{ needs.get-version.outputs.petsc_commit}} \
-            --amend $IMAGE_ID-x64:${{ needs.get-version.outputs.petsc_commit}} 
+            --amend $IMAGE_ID-amd64:${{ needs.get-version.outputs.petsc_commit}} 
 
           # push
           docker manifest push $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}}
