--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -57,9 +57,9 @@ jobs:
         id: cache
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ matrix.config.arch }}-${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ matrix.config.arch }}-${{ runner.os }}-buildx-
             
       - name: Run Test image
         run: |
@@ -111,9 +111,9 @@ jobs:
         id: cache
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ matrix.config.arch }}-${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ matrix.config.arch }}-${{ runner.os }}-buildx-
 
       - name: Log into registry
         run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
@@ -152,15 +152,6 @@ jobs:
           
       - uses: actions/checkout@v2
       
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-            
       - name: Log into registry
         run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
 
@@ -181,7 +172,7 @@ jobs:
 
           # tag as latest
           docker manifest create \
-            $IMAGE_ID:$latest \
+            $IMAGE_ID:latest \
             --amend $IMAGE_ID-arm64:${{ needs.get-version.outputs.petsc_commit}} \
             --amend $IMAGE_ID-amd64:${{ needs.get-version.outputs.petsc_commit}} 
             
